--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Tree <span>🌲</span></h1>
+        <h1>Tree <img src="images/tree.png" alt="tree_logo"  ></h1>
 
         <nav>
             <ul>
